Еще кое-что исправил

--- a/catalog.html
+++ b/catalog.html
@@ -85,78 +85,66 @@
       <section class="list-items">
         <article class="catalog-item">
           <a class="preview" href="#"><img src="/img/bax-of-cal1.png" alt="Набор для путешествий «Baxter of California»"></a>
-          <h2>
-            <a href="#">
-              <span class="title-item">Набор для путешествий</span>
-              <span class="mark">«Baxter of California»</span>
-            </a>
-          </h2>
-          <div>
+          <div class="catalog-item-name">
+            <h2 class="catalog-item-title"><a href="#">Набор для путешествий</a></h2>
+            <span class="catalog-item-mark">«Baxter of California»</span>
+          </div>
+          <div class="buy-item">
             <span class="price-item">2 900 РУБ.</span>
             <button class="btn buy-it" type="button">КУПИТЬ</button>
           </div>
         </article>
         <article class="catalog-item">
           <a class="preview" href="#"><img src="/img/bax-of-cal2.png" alt="Увлажняющий кондиционер «Baxter of California»"></a>
-          <h2>
-            <a href="#">
-              <span class="title-item">Увлажняющий кондиционер</span>
-              <span class="mark">«Baxter of California»</span>
-            </a>
-          </h2>
-          <div>
+          <div class="catalog-item-name">
+            <h2 class="catalog-item-title"><a href="#">Увлажняющий кондиционер</a></h2>
+            <span class="catalog-item-mark">«Baxter of California»</span>
+          </div>
+          <div class="buy-item">
             <span class="price-item">750 РУБ.</span>
             <button class="btn buy-it" type="button">КУПИТЬ</button>
           </div>
         </article>
         <article class="catalog-item">
           <a class="preview" href="#"><img src="/img/SUAVECITO.png" alt="Гель для волос «SUAVECITO»"></a>
-          <h2>
-            <a href="#">
-              <span class="title-item">Гель для волос</span>
-              <span class="mark">«SUAVECITO»</span>
-            </a>
-          </h2>
-          <div>
+          <div class="catalog-item-name">
+            <h2 class="catalog-item-title"><a href="#">Гель для волос</a></h2>
+            <span class="catalog-item-mark">«SUAVECITO»</span>
+          </div>
+          <div class="buy-item">
             <span class="price-item">290 РУБ.</span>
             <button class="btn buy-it" type="button">КУПИТЬ</button>
           </div>
         </article>
         <article class="catalog-item">
           <a class="preview"><img src="/img/am-crew1.png" alt="Глина для укладки волос «American crew»"></a>
-          <h2>
-            <a href="#">
-              <span class="title-item">Глина для укладки волос</span>
-              <span class="mark">«American crew»</span>
-            </a>
-          </h2>
-          <div>
+          <div class="catalog-item-name">
+            <h2 class="catalog-item-title"><a href="#">Глина для укладки волос</a></h2>
+            <span class="catalog-item-mark">«American crew»</span>
+          </div>
+          <div class="buy-item">
             <span class="price-item">500 РУБ.</span>
             <button class="btn buy-it" type="button">КУПИТЬ</button>
           </div>
         </article>
         <article class="catalog-item">
           <a href="#"><img src="/img/am-crew2.png" alt="Гель для волос «American crew»"></a>
-          <h2>
-            <a href="#">
-              <span class="title-item">Гель для волос</span>
-              <span class="mark">«American crew»</span>
-            </a>
-          </h2>
-          <div>
+          <div class="catalog-item-name">
+            <h2 class="catalog-item-title"><a href="#">Гель для волос</a></h2>
+            <span class="catalog-item-mark">«American crew»</span>
+          </div>
+          <div class="buy-item">
             <span class="price-item">300 РУБ.</span>
             <button class="btn buy-it" type="button">КУПИТЬ</button>
           </div>
         </article>
         <article class="catalog-item">
           <a href="#"><img src="/img/bax-of-cal2.png" alt="Набор для бритья «Baxter of California»"></a>
-          <h2>
-            <a href="#">
-              <span class="title-item">Набор для бритья</span>
-              <span class="mark">«Baxter of California»</span>
-            </a>
-          </h2>
-          <div>
+          <div class="catalog-item-name">
+            <h2 class="catalog-item-title"><a href="#">Набор для бритья</a></h2>
+            <span class="catalog-item-mark">«Baxter of California»</span>
+          </div>
+          <div class="buy-item">
             <span class="price-item">3 900 РУБ.</span>
             <button class="btn buy-it" type="button">КУПИТЬ</button>
           </div>
