--- a/catalog-item.html
+++ b/catalog-item.html
@@ -7,7 +7,7 @@
   <body>
     <header class="main-header">
       <div class="container">
-        <a class="logo"><img src="/img/logo.png" alt="Barbershop-logo"></a>
+        <a class="logo" href="#"><img src="/img/logo.png" alt="Barbershop-logo"></a>
         <nav class="main-navigation">
           <ul>
             <li>
