Подключил контентные изображения, поправил разметку

--- a/catalog.html
+++ b/catalog.html
@@ -7,7 +7,7 @@
   <body>
     <header class="main-header">
       <div class="container">
-        <a class="logo" href="#"><img src="/img/logo.png" alt="Barbershop-logo"></a>
+        <a class="logo" href="index.html"><img src="img/logo.png" alt="Barbershop-logo"></a>
         <nav class="main-navigation">
           <ul>
             <li>
@@ -33,21 +33,21 @@
       </div>
     </header>
     <main class="container">
-      <h1>СРЕДСТВА ДЛЯ УХОДА</h1>
+      <h1>Cредства для ухода</h1>
       <nav class="breadcrumbs">
         <ul>
           <li>
-            <a href="#">ГЛАВНАЯ</a>
+            <a href="#">Главная</a>
           </li>
           <li>
-            <a href="#">МАГАЗИН</a>
+            <a href="#">Магазин</a>
           </li>
-          <li>СРЕДСТВА ДЛЯ УХОДА</li>
+          <li>Средства для ухода</li>
         </ul>
       </nav>
       <form action="#" method="get">
         <div class="filter-devel">
-          <h2>ПРОИЗВОДИТЕЛИ:</h2>
+          <h2>Производители:</h2>
           <label>
             <input type="checkbox" checked> Baxter of California
           </label>
@@ -68,7 +68,7 @@
           </label>
         </div>
         <div class="filter-item">
-          <h2>ГРУППЫ ТОВАРОВ:</h2>
+          <h2>группы товаров:</h2>
           <labeL>
             <input type="radio" name="group-items" value="1"> Бритвенные
 принадлежности
@@ -84,69 +84,69 @@
       </form>
       <section class="list-items">
         <article class="catalog-item">
-          <a class="preview" href="#"><img src="/img/bax-of-cal1.png" alt="Набор для путешествий «Baxter of California»"></a>
+          <a class="preview" href="#"><img src="img/catalog-item-1.jpg" alt="Набор для путешествий «Baxter of California»"></a>
           <div class="catalog-item-name">
             <h2 class="catalog-item-title"><a href="#">Набор для путешествий</a></h2>
             <span class="catalog-item-mark">«Baxter of California»</span>
           </div>
           <div class="buy-item">
-            <span class="price-item">2 900 РУБ.</span>
-            <button class="btn buy-it" type="button">КУПИТЬ</button>
+            <span class="price-item">2 900 руб.</span>
+            <button class="btn buy-it" type="button">Купить</button>
           </div>
         </article>
         <article class="catalog-item">
-          <a class="preview" href="#"><img src="/img/bax-of-cal2.png" alt="Увлажняющий кондиционер «Baxter of California»"></a>
+          <a class="preview" href="#"><img src="img/catalog-item-2.jpg" alt="Увлажняющий кондиционер «Baxter of California»"></a>
           <div class="catalog-item-name">
             <h2 class="catalog-item-title"><a href="#">Увлажняющий кондиционер</a></h2>
             <span class="catalog-item-mark">«Baxter of California»</span>
           </div>
           <div class="buy-item">
-            <span class="price-item">750 РУБ.</span>
-            <button class="btn buy-it" type="button">КУПИТЬ</button>
+            <span class="price-item">750 руб.</span>
+            <button class="btn buy-it" type="button">Купить</button>
           </div>
         </article>
         <article class="catalog-item">
-          <a class="preview" href="#"><img src="/img/SUAVECITO.png" alt="Гель для волос «SUAVECITO»"></a>
+          <a class="preview" href="#"><img src="img/catalog-item-3.jpg" alt="Гель для волос «Suavecito»"></a>
           <div class="catalog-item-name">
             <h2 class="catalog-item-title"><a href="#">Гель для волос</a></h2>
-            <span class="catalog-item-mark">«SUAVECITO»</span>
+            <span class="catalog-item-mark">«Suavecito»</span>
           </div>
           <div class="buy-item">
             <span class="price-item">290 РУБ.</span>
-            <button class="btn buy-it" type="button">КУПИТЬ</button>
+            <button class="btn buy-it" type="button">Купить</button>
           </div>
         </article>
         <article class="catalog-item">
-          <a class="preview"><img src="/img/am-crew1.png" alt="Глина для укладки волос «American crew»"></a>
+          <a class="preview" href="#"><img src="img/catalog-item-4.jpg" alt="Глина для укладки волос «American crew»"></a>
           <div class="catalog-item-name">
             <h2 class="catalog-item-title"><a href="#">Глина для укладки волос</a></h2>
             <span class="catalog-item-mark">«American crew»</span>
           </div>
           <div class="buy-item">
-            <span class="price-item">500 РУБ.</span>
-            <button class="btn buy-it" type="button">КУПИТЬ</button>
+            <span class="price-item">500 руб.</span>
+            <button class="btn buy-it" type="button">Купить</button>
           </div>
         </article>
         <article class="catalog-item">
-          <a href="#"><img src="/img/am-crew2.png" alt="Гель для волос «American crew»"></a>
+          <a class="preview" href="#"><img src="img/catalog-item-5.jpg" alt="Гель для волос «American crew»"></a>
           <div class="catalog-item-name">
             <h2 class="catalog-item-title"><a href="#">Гель для волос</a></h2>
             <span class="catalog-item-mark">«American crew»</span>
           </div>
           <div class="buy-item">
-            <span class="price-item">300 РУБ.</span>
-            <button class="btn buy-it" type="button">КУПИТЬ</button>
+            <span class="price-item">300 руб.</span>
+            <button class="btn buy-it" type="button">Купить</button>
           </div>
         </article>
         <article class="catalog-item">
-          <a href="#"><img src="/img/bax-of-cal2.png" alt="Набор для бритья «Baxter of California»"></a>
+          <a class="preview" href="#"><img src="img/catalog-item-6.jpg" alt="Набор для бритья «Baxter of California»"></a>
           <div class="catalog-item-name">
             <h2 class="catalog-item-title"><a href="#">Набор для бритья</a></h2>
             <span class="catalog-item-mark">«Baxter of California»</span>
           </div>
           <div class="buy-item">
-            <span class="price-item">3 900 РУБ.</span>
-            <button class="btn buy-it" type="button">КУПИТЬ</button>
+            <span class="price-item">3 900 руб.</span>
+            <button class="btn buy-it" type="button">Купить</button>
           </div>
         </article>
       </section>
