--- a/catalog-item.html
+++ b/catalog-item.html
@@ -2,12 +2,12 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>HTML Academy: Барбершоп - НАБОР ДЛЯ ПУТЕШЕСТВИЙ «BAXTER OF CALIFORNIA»</title>
+    <title>HTML Academy: Барбершоп - Набор для путешествий «Baxter of California»</title>
   </head>
   <body>
     <header class="main-header">
       <div class="container">
-        <a class="logo" href="#"><img src="/img/logo.png" alt="Barbershop-logo"></a>
+        <a class="logo" href="#"><img src="img/logo.png" alt="Barbershop-logo"></a>
         <nav class="main-navigation">
           <ul>
             <li>
@@ -33,32 +33,32 @@
       </div>
     </header>
     <main class="container">
-      <h1>НАБОР ДЛЯ ПУТЕШЕСТВИЙ «BAXTER OF CALIFORNIA»</h1>
+      <h1>Набор для путешествий «Baxter of California»</h1>
       <nav class="breadcrumbs">
         <ul>
           <li>
-            <a href="#">ГЛАВНАЯ</a>
+            <a href="#">Главная</a>
           </li>
           <li>
-            <a href="#">МАГАЗИН</a>
+            <a href="#">Магазин</a>
           </li>
           <li>
-            <a href="#">СРЕДСТВА ДЛЯ УХОДА</a>
+            <a href="#">Средства для ухода</a>
           </li>
-          <li>НАБОР ДЛЯ ПУТЕШЕСТВИЙ «BAXTER OF CALIFORNIA»</li>
+          <li>Набор для путешествий «Baxter of California»</li>
         </ul>
       </nav>
       <section class="item-galery">
-        <div>           <!-- Обязательно ли давать <div> класс или можно будет использовать вложенные сеоекторы? -->
-          <img src="baxt-of-cal-1" alt="НАБОР ДЛЯ ПУТЕШЕСТВИЙ «BAXTER OF CALIFORNIA»-1">
+        <div class="item-main-img">
+          <img src="img/baxt-of-cal-1.png" alt="Набор для путешествий «Baxter of California»-1">
         </div>
-        <a href="#"><img src="baxt-of-cal-2" alt="НАБОР ДЛЯ ПУТЕШЕСТВИЙ «BAXTER OF CALIFORNIA»-2"></a>
-        <a href="#"><img src="baxt-of-cal-3" alt="НАБОР ДЛЯ ПУТЕШЕСТВИЙ «BAXTER OF CALIFORNIA»-3"></a>
-        <a href="#"><img src="baxt-of-cal-4" alt="НАБОР ДЛЯ ПУТЕШЕСТВИЙ «BAXTER OF CALIFORNIA»-4"></a>
+        <a href="#"><img src="img/baxt-of-cal-2.png" alt="Набор для путешествий «Baxter of California»-2"></a>
+        <a href="#"><img src="img/baxt-of-cal-3.png" alt="Набор для путешествий «Baxter of California»-3"></a>
+        <a href="#"><img src="img/baxt-of-cal-4.png" alt="Набор для путешествий «Baxter of California»-4"></a>
       </section>
       <section class="item-description">
         <div class="availability">
-          <span>есть в наличии</span>
+          <span>Есть в наличии</span>
           <span class="code">Артикул: dexter-ae</span>
         </div>
         <p>Travel Kit – необходимый аксессуар во время любого
@@ -70,8 +70,8 @@
         </p>
       </section>
       <div class="buy-item">
-        <span class="price-item">2 900 РУБ.</span>
-        <button class="btn buy-it" type="button">КУПИТЬ</button>
+        <span class="price-item">2 900 руб.</span>
+        <button class="btn buy-it" type="button">Купить</button>
       </div>
       <section class="item-consist">
         <h2>В набор входят:</h2>
