Создал и подключил файл стилей style.css

--- a/catalog-item.html
+++ b/catalog-item.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Барбершоп - Набор для путешествий «Baxter of California»</title>
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
     <header class="main-header">
@@ -43,7 +44,7 @@
             <a href="#">Магазин</a>
           </li>
           <li>
-            <a href="#">Средства для ухода</a>
+            <a href="catalog.html">Средства для ухода</a>
           </li>
           <li>Набор для путешествий «Baxter of California»</li>
         </ul>
