--- a/catalog.html
+++ b/catalog.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Барбершоп - Каталог</title>
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
     <header class="main-header">
@@ -33,7 +34,7 @@
       </div>
     </header>
     <main class="container">
-      <h1>Cредства для ухода</h1>
+      <h1 class="catalog-title">Cредства для ухода</h1>
       <nav class="breadcrumbs">
         <ul>
           <li>
@@ -47,7 +48,7 @@
       </nav>
       <form action="#" method="get">
         <div class="filter-devel">
-          <h2>Производители:</h2>
+          <h2 class="filter-devel-title">Производители:</h2>
           <label>
             <input type="checkbox" checked> Baxter of California
           </label>
@@ -68,7 +69,7 @@
           </label>
         </div>
         <div class="filter-item">
-          <h2>группы товаров:</h2>
+          <h2>Группы товаров:</h2>
           <labeL>
             <input type="radio" name="group-items" value="1"> Бритвенные
 принадлежности
