Заменил изображения товара в catalog-item.html, поправил style.css

--- a/catalog-item.html
+++ b/catalog-item.html
@@ -51,11 +51,11 @@
       </nav>
       <section class="item-galery">
         <div class="item-main-img">
-          <img src="img/baxt-of-cal-1.png" alt="Набор для путешествий «Baxter of California»-1">
+          <img src="img/baxt-of-cal-1.jpg" alt="Набор для путешествий «Baxter of California»-1">
         </div>
-        <a href="#"><img src="img/baxt-of-cal-2.png" alt="Набор для путешествий «Baxter of California»-2"></a>
-        <a href="#"><img src="img/baxt-of-cal-3.png" alt="Набор для путешествий «Baxter of California»-3"></a>
-        <a href="#"><img src="img/baxt-of-cal-4.png" alt="Набор для путешествий «Baxter of California»-4"></a>
+        <a href="#"><img src="img/baxt-of-cal-2.jpg" alt="Набор для путешествий «Baxter of California»-2"></a>
+        <a href="#"><img src="img/baxt-of-cal-3.jpg" alt="Набор для путешествий «Baxter of California»-3"></a>
+        <a href="#"><img src="img/baxt-of-cal-4.jpg" alt="Набор для путешествий «Baxter of California»-4"></a>
       </section>
       <section class="item-description">
         <div class="availability">
