Поправил разметку и сетки

--- a/catalog.html
+++ b/catalog.html
@@ -105,8 +105,12 @@
         <article class="catalog-item">
           <a class="preview" href="#"><img src="img/catalog-item-1.jpg" alt="Набор для путешествий «Baxter of California»"></a>
           <div class="catalog-item-name">
-            <h2 class="catalog-item-title"><a href="#">Набор для путешествий</a></h2>
-            <span class="catalog-item-mark">«Baxter of California»</span>
+            <h2 class="catalog-item-title">
+              <a href="#">
+                <span class="category-item">Набор для путешествий</span>
+                <span class="mark-item">«Baxter of California»</span>
+              </a>
+            </h2>
           </div>
           <div class="buy-item">
             <span class="price-item">2 900 руб.</span>
@@ -116,8 +120,12 @@
         <article class="catalog-item">
           <a class="preview" href="#"><img src="img/catalog-item-2.jpg" alt="Увлажняющий кондиционер «Baxter of California»"></a>
           <div class="catalog-item-name">
-            <h2 class="catalog-item-title"><a href="#">Увлажняющий кондиционер</a></h2>
-            <span class="catalog-item-mark">«Baxter of California»</span>
+            <h2 class="catalog-item-title">
+              <a href="#">
+                <span class="category-item">Увлажняющий кондиционер</span>
+                <span class="mark-item">«Baxter of California»</span>
+              </a>
+            </h2>
           </div>
           <div class="buy-item">
             <span class="price-item">750 руб.</span>
@@ -127,8 +135,12 @@
         <article class="catalog-item">
           <a class="preview" href="#"><img src="img/catalog-item-3.jpg" alt="Гель для волос «Suavecito»"></a>
           <div class="catalog-item-name">
-            <h2 class="catalog-item-title"><a href="#">Гель для волос</a></h2>
-            <span class="catalog-item-mark">«Suavecito»</span>
+            <h2 class="catalog-item-title">
+              <a href="#">
+                <span class="category-item">Гель для волос</span>
+                <span class="mark-item">«Suavecito»</span>
+              </a>
+            </h2>
           </div>
           <div class="buy-item">
             <span class="price-item">290 РУБ.</span>
@@ -138,8 +150,13 @@
         <article class="catalog-item">
           <a class="preview" href="#"><img src="img/catalog-item-4.jpg" alt="Глина для укладки волос «American crew»"></a>
           <div class="catalog-item-name">
-            <h2 class="catalog-item-title"><a href="#">Глина для укладки волос</a></h2>
-            <span class="catalog-item-mark">«American crew»</span>
+            <div class="catalog-item-name">
+              <h2 class="catalog-item-title">
+                <a href="#">
+                  <span class="category-item">Глина для укладки волос</span>
+                  <span class="mark-item">«American crew»</span>
+                </a>
+              </h2>
           </div>
           <div class="buy-item">
             <span class="price-item">500 руб.</span>
@@ -149,8 +166,12 @@
         <article class="catalog-item">
           <a class="preview" href="#"><img src="img/catalog-item-5.jpg" alt="Гель для волос «American crew»"></a>
           <div class="catalog-item-name">
-            <h2 class="catalog-item-title"><a href="#">Гель для волос</a></h2>
-            <span class="catalog-item-mark">«American crew»</span>
+            <h2 class="catalog-item-title">
+              <a href="#">
+                <span class="category-item">Гель для волос</span>
+                <span class="mark-item">«American crew»</span>
+              </a>
+            </h2>
           </div>
           <div class="buy-item">
             <span class="price-item">300 руб.</span>
@@ -160,8 +181,12 @@
         <article class="catalog-item">
           <a class="preview" href="#"><img src="img/catalog-item-6.jpg" alt="Набор для бритья «Baxter of California»"></a>
           <div class="catalog-item-name">
-            <h2 class="catalog-item-title"><a href="#">Набор для бритья</a></h2>
-            <span class="catalog-item-mark">«Baxter of California»</span>
+            <h2 class="catalog-item-title">
+              <a href="#">
+                <span class="category-item">Набор для бритья</span>
+                <span class="mark-item">«Baxter of California»</span>
+              </a>
+            </h2>
           </div>
           <div class="buy-item">
             <span class="price-item">3 900 руб.</span>
