Начал разметку catalog-item.html

--- a/catalog-item.html
+++ b/catalog-item.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <header class="main-header">
-      <div class="container">
+      <div class="container clearfix">
         <a class="logo" href="#"><img src="img/logo.png" alt="Barbershop-logo"></a>
         <nav class="main-navigation">
           <ul>
@@ -33,8 +33,8 @@
         </div>
       </div>
     </header>
-    <main class="container">
-      <h1>Набор для путешествий «Baxter of California»</h1>
+    <main class="container clearfix">
+      <h1 calss="catalog-item-header">Набор для путешествий «Baxter of California»</h1>
       <nav class="breadcrumbs">
         <ul>
           <li>
@@ -49,7 +49,7 @@
           <li>Набор для путешествий «Baxter of California»</li>
         </ul>
       </nav>
-      <section class="item-galery">
+      <section class="item-gallery">
         <div class="item-main-img">
           <img src="img/baxt-of-cal-1.jpg" alt="Набор для путешествий «Baxter of California»-1">
         </div>
@@ -58,9 +58,9 @@
         <a href="#"><img src="img/baxt-of-cal-4.jpg" alt="Набор для путешествий «Baxter of California»-4"></a>
       </section>
       <section class="item-description">
-        <div class="availability">
-          <span>Есть в наличии</span>
-          <span class="code">Артикул: dexter-ae</span>
+        <div class="availability clearfix">
+          <span class="avail-info">Есть в наличии</span>
+          <span class="item-code">Артикул: dexter-ae</span>
         </div>
         <p>Travel Kit – необходимый аксессуар во время любого
         путешествия.В аккуратной кожаной сумке находится все, что
@@ -86,7 +86,7 @@
       </section>
     </main>
     <footer class="main-footer">
-      <div class="container">
+      <div class="container clearfix">
         <section class="footer-contacts">
           Барбершоп «Бородинский»<br>
           Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
