--- a/catalog.html
+++ b/catalog.html
@@ -33,7 +33,7 @@
         </div>
       </div>
     </header>
-    <main class="container clearfix">
+    <main class="container">
       <h1 class="catalog-title">Cредства для ухода</h1>
       <nav class="breadcrumbs">
         <ul>
@@ -47,169 +47,173 @@
         </ul>
       </nav>
       <div class="wrapper clearfix">
-        <form class="filters" action="#" method="get">
-          <div class="filter-devel">
-            <h2 class="filter-devel-title">Производители:</h2>
-            <p>
-              <label>
-                <input type="checkbox" checked> Baxter of California
-              </label>
-            </p>
-            <p>
-              <label>
-                <input type="checkbox"> Mr Natty
-              </label>
-            </p>
-            <p>
-              <label>
-                <input type="checkbox" checked> Suavecito
-              </label>
-            </p>
-            <p>
-              <label>
-                <input type="checkbox"> Malin+Goetz
-              </label>
-            </p>
-            <p>
-              <label>
-                <input type="checkbox"> Murray’s
-              </label>
-            </p>
-            <p>
-              <label>
-                <input type="checkbox" checked> American Crew
-              </label>
-            </p>
-          </div>
-          <div class="filter-item">
-            <h2>Группы товаров:</h2>
-            <p>
-              <labeL>
-                <input type="radio" name="group-items" value="1"> Бритвенные
+        <div class="catalog-left-column">
+          <form class="filters" action="#" method="get">
+            <div class="filter-devel">
+              <h2 class="filter-devel-title">Производители:</h2>
+              <p>
+                <label>
+                  <input type="checkbox" checked> Baxter of California
+                </label>
+              </p>
+              <p>
+                <label>
+                  <input type="checkbox"> Mr Natty
+                </label>
+              </p>
+              <p>
+                <label>
+                  <input type="checkbox" checked> Suavecito
+                </label>
+              </p>
+              <p>
+                <label>
+                  <input type="checkbox"> Malin+Goetz
+                </label>
+              </p>
+              <p>
+                <label>
+                  <input type="checkbox"> Murray’s
+                </label>
+              </p>
+              <p>
+                <label>
+                  <input type="checkbox" checked> American Crew
+                </label>
+              </p>
+            </div>
+            <div class="filter-item">
+              <h2>Группы товаров:</h2>
+              <p>
+                <labeL>
+                  <input type="radio" name="group-items" value="1"> Бритвенные
 принадлежности
-              </label>
-            </p>
-            <p>
-              <labeL>
-                <input type="radio" name="group-items" value="2" checked> Средства для ухода
-              </label>
-            </p>
-            <p>
-              <labeL>
-                <input type="radio" name="group-items" value="3"> Аксессуары
-              </label>
-            </p>
-          </div>
-          <button class="btn show-items" type="submit">Показать</button>
-        </form>
-        <section class="list-items clearfix">
-          <article class="catalog-item">
-            <a class="preview" href="#"><img src="img/catalog-item-1.jpg" alt="Набор для путешествий «Baxter of California»"></a>
-            <div class="catalog-item-name">
-              <h2 class="catalog-item-title">
-                <a href="#">
-                  <span class="category-item">Набор для путешествий</span>
-                  <span class="mark-item">«Baxter of California»</span>
-                </a>
-              </h2>
+                </label>
+              </p>
+              <p>
+                <labeL>
+                  <input type="radio" name="group-items" value="2" checked> Средства для ухода
+                </label>
+              </p>
+              <p>
+                <labeL>
+                  <input type="radio" name="group-items" value="3"> Аксессуары
+                </label>
+              </p>
             </div>
-            <div class="buy-item">
-              <span class="price-item">2 900 руб.</span>
-              <button class="btn buy-it" type="button">Купить</button> <!-- должна быть ссылка -->
-            </div>
-          </article>
-          <article class="catalog-item">
-            <a class="preview" href="#"><img src="img/catalog-item-2.jpg" alt="Увлажняющий кондиционер «Baxter of California»"></a>
-            <div class="catalog-item-name">
-              <h2 class="catalog-item-title">
-                <a href="#">
-                  <span class="category-item">Увлажняющий кондиционер</span>
-                  <span class="mark-item">«Baxter of California»</span>
-                </a>
-              </h2>
-            </div>
-            <div class="buy-item">
-              <span class="price-item">750 руб.</span>
-              <button class="btn buy-it" type="button">Купить</button>
-            </div>
-          </article>
-          <article class="catalog-item">
-            <a class="preview" href="#"><img src="img/catalog-item-3.jpg" alt="Гель для волос «Suavecito»"></a>
-            <div class="catalog-item-name">
-              <h2 class="catalog-item-title">
-                <a href="#">
-                  <span class="category-item">Гель для волос</span>
-                  <span class="mark-item">«Suavecito»</span>
-                </a>
-              </h2>
-            </div>
-            <div class="buy-item">
-              <span class="price-item">290 РУБ.</span>
-              <button class="btn buy-it" type="button">Купить</button>
-            </div>
-          </article>
-          <article class="catalog-item">
-            <a class="preview" href="#"><img src="img/catalog-item-4.jpg" alt="Глина для укладки волос «American crew»"></a>
-            <div class="catalog-item-name">
-              <h2 class="catalog-item-title">
-                <a href="#">
-                  <span class="category-item">Глина для укладки волос</span>
-                  <span class="mark-item">«American crew»</span>
-                </a>
-              </h2>
-            </div>
-            <div class="buy-item">
-              <span class="price-item">500 руб.</span>
-              <button class="btn buy-it" type="button">Купить</button>
-            </div>
-          </article>
-          <article class="catalog-item">
-            <a class="preview" href="#"><img src="img/catalog-item-5.jpg" alt="Гель для волос «American crew»"></a>
-            <div class="catalog-item-name">
-              <h2 class="catalog-item-title">
-                <a href="#">
-                  <span class="category-item">Гель для волос</span>
-                  <span class="mark-item">«American crew»</span>
-                </a>
-              </h2>
-            </div>
-            <div class="buy-item">
-              <span class="price-item">300 руб.</span>
-              <button class="btn buy-it" type="button">Купить</button>
-            </div>
-          </article>
-          <article class="catalog-item">
-            <a class="preview" href="#"><img src="img/catalog-item-6.jpg" alt="Набор для бритья «Baxter of California»"></a>
-            <div class="catalog-item-name">
-              <h2 class="catalog-item-title">
-                <a href="#">
-                  <span class="category-item">Набор для бритья</span>
-                  <span class="mark-item">«Baxter of California»</span>
-                </a>
-              </h2>
-            </div>
-            <div class="buy-item">
-              <span class="price-item">3 900 руб.</span>
-              <button class="btn buy-it" type="button">Купить</button>
-            </div>
-          </article>
-        </section>
-        <nav class="pages">
-          <ul>
-            <li>
-              <a class="btn btn-page" href="#">1</a>
-            </li>
-            <li>
-              <a class="btn btn-page" href="#">2</a>
-            </li>
-            <li>
-              <a class="btn btn-page" href="#">3</a>
-            </li>
-            <li>
-              <a class="btn btn-page" href="#">4</a>
-            </li>
-          </ul>
-        </nav>
+            <button class="btn show-items" type="submit">Показать</button>
+          </form>
+        </div>
+        <div class="catalog-right-column">
+          <section class="list-items clearfix">
+            <article class="catalog-item">
+              <a class="preview" href="#"><img src="img/catalog-item-1.jpg" alt="Набор для путешествий «Baxter of California»"></a>
+              <div class="catalog-item-name">
+                <h2 class="catalog-item-title">
+                  <a href="#">
+                    <span class="category-item">Набор для путешествий</span>
+                    <span class="mark-item">«Baxter of California»</span>
+                  </a>
+                </h2>
+              </div>
+              <div class="buy-item">
+                <span class="price-item">2 900 руб.</span>
+                <button class="btn buy-it" type="button">Купить</button> <!-- должна быть ссылка -->
+              </div>
+            </article>
+            <article class="catalog-item">
+              <a class="preview" href="#"><img src="img/catalog-item-2.jpg" alt="Увлажняющий кондиционер «Baxter of California»"></a>
+              <div class="catalog-item-name">
+                <h2 class="catalog-item-title">
+                  <a href="#">
+                    <span class="category-item">Увлажняющий кондиционер</span>
+                    <span class="mark-item">«Baxter of California»</span>
+                  </a>
+                </h2>
+              </div>
+              <div class="buy-item">
+                <span class="price-item">750 руб.</span>
+                <button class="btn buy-it" type="button">Купить</button>
+              </div>
+            </article>
+            <article class="catalog-item">
+              <a class="preview" href="#"><img src="img/catalog-item-3.jpg" alt="Гель для волос «Suavecito»"></a>
+              <div class="catalog-item-name">
+                <h2 class="catalog-item-title">
+                  <a href="#">
+                    <span class="category-item">Гель для волос</span>
+                    <span class="mark-item">«Suavecito»</span>
+                  </a>
+                </h2>
+              </div>
+              <div class="buy-item">
+                <span class="price-item">290 РУБ.</span>
+                <button class="btn buy-it" type="button">Купить</button>
+              </div>
+            </article>
+            <article class="catalog-item">
+              <a class="preview" href="#"><img src="img/catalog-item-4.jpg" alt="Глина для укладки волос «American crew»"></a>
+              <div class="catalog-item-name">
+                <h2 class="catalog-item-title">
+                  <a href="#">
+                    <span class="category-item">Глина для укладки волос</span>
+                    <span class="mark-item">«American crew»</span>
+                  </a>
+                </h2>
+              </div>
+              <div class="buy-item">
+                <span class="price-item">500 руб.</span>
+                <button class="btn buy-it" type="button">Купить</button>
+              </div>
+            </article>
+            <article class="catalog-item">
+              <a class="preview" href="#"><img src="img/catalog-item-5.jpg" alt="Гель для волос «American crew»"></a>
+              <div class="catalog-item-name">
+                <h2 class="catalog-item-title">
+                  <a href="#">
+                    <span class="category-item">Гель для волос</span>
+                    <span class="mark-item">«American crew»</span>
+                  </a>
+                </h2>
+              </div>
+              <div class="buy-item">
+                <span class="price-item">300 руб.</span>
+                <button class="btn buy-it" type="button">Купить</button>
+              </div>
+            </article>
+            <article class="catalog-item">
+              <a class="preview" href="#"><img src="img/catalog-item-6.jpg" alt="Набор для бритья «Baxter of California»"></a>
+              <div class="catalog-item-name">
+                <h2 class="catalog-item-title">
+                  <a href="#">
+                    <span class="category-item">Набор для бритья</span>
+                    <span class="mark-item">«Baxter of California»</span>
+                  </a>
+                </h2>
+              </div>
+              <div class="buy-item">
+                <span class="price-item">3 900 руб.</span>
+                <button class="btn buy-it" type="button">Купить</button>
+              </div>
+            </article>
+          </section>
+          <nav class="pages">
+            <ul>
+              <li>
+                <a class="btn btn-page" href="#">1</a>
+              </li>
+              <li>
+                <a class="btn btn-page" href="#">2</a>
+              </li>
+              <li>
+                <a class="btn btn-page" href="#">3</a>
+              </li>
+              <li>
+                <a class="btn btn-page" href="#">4</a>
+              </li>
+            </ul>
+          </nav>
+        </div>
       </div>
     </main>
     <footer class="main-footer">
